# urim-platform

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  KIT_TREE.md  PLANS.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  SECURITY.md  manifest.json  package.json  pnpm-lock.yaml  render.yaml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py
apps/api/scripts/: api_football_first_real_local_smoke.py  api_football_fixture_first_real_local_smoke.py  api_football_fixture_local_real_smoke_protocol.py  api_football_local_preflight.py  api_football_local_smoke_harness.py  run_first_real_local_smoke.ps1  run_fixture_first_real_local_smoke.ps1
apps/api/tests/: test_api_football_first_real_local_smoke_execution.py  test_api_football_first_real_local_smoke_protocol.py  test_api_football_fixture_baseline_analytics_engine.py  test_api_football_fixture_compact_smoke_runner.py  test_api_football_fixture_data_freshness_audit.py  test_api_football_fixture_feature_snapshot_contract.py  test_api_football_fixture_first_real_local_smoke.py  test_api_football_fixture_league_team_staging_linkage_gate.py  test_api_football_fixture_local_real_smoke_protocol.py  test_api_football_fixture_read_only_harness.py  test_api_football_fixture_real_smoke_evidence_compact_output.py  test_api_football_fixture_request_builder.py  test_api_football_fixture_response_normalizer.py  test_api_football_fixture_staging_read_api.py  test_api_football_leagues_teams_request_builder.py  test_api_football_smoke_client.py  (+38 more)
(+303 files in other folders)
