[project]
name = "urim-api"
version = "0.1.0"
description = "URIM Phase 1 FastAPI skeleton for the Kairos engine."
readme = "../../README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6",
  "pydantic-settings>=2.7.1",
  "uvicorn[standard]>=0.34.0"
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.4"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
