[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "urim-api"
version = "0.1.0"
description = "URIM Phase 23 API-Football local secret and environment preflight for the Kairos engine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.6",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.1",
  "psycopg[binary]>=3.2.3",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.4",
  "ruff>=0.8.4"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"

[tool.setuptools.packages.find]
include = ["app*"]
